packages/clippier/tests/snapshots/business_logic_tests__features_with_git_submodules.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: parsed
---
- os: ubuntu
  path: "[TEMP_PATH]"
  name: inherited-submodules
  features:
    - default
    - feature-1
    - feature-2
  requiredFeatures: ~
  nightly: false
  gitSubmodules: true
- os: macos
  path: "[TEMP_PATH]"
  name: inherited-submodules
  features:
    - default
    - feature-1
    - feature-2
  requiredFeatures: ~
  nightly: false
  gitSubmodules: true
- os: ubuntu
  path: "[TEMP_PATH]"
  name: with-submodules
  features:
    - default
    - feature-a
    - feature-b
  requiredFeatures: ~
  nightly: false
  gitSubmodules: true
- os: macos
  path: "[TEMP_PATH]"
  name: with-submodules
  features:
    - default
    - feature-a
    - feature-b
  requiredFeatures: ~
  nightly: false
  gitSubmodules: true
- os: windows
  path: "[TEMP_PATH]"
  name: with-submodules
  features:
    - default
    - feature-a
    - feature-b
  requiredFeatures: ~
  nightly: false
  gitSubmodules: true
- os: ubuntu
  path: "[TEMP_PATH]"
  name: without-submodules
  features:
    - default
    - feature-x
    - feature-y
  requiredFeatures: ~
  nightly: false
