packages/clippier/tests/snapshots/business_logic_tests__packages_command_basic.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: normalize_paths(parsed)
---
- name: api
  os: ubuntu-latest
  path: packages/api
- name: cli
  os: ubuntu-latest
  path: packages/cli
- name: core
  os: ubuntu-latest
  path: packages/core
- name: models
  os: ubuntu-latest
  path: packages/models
- name: shared-utils
  os: ubuntu-latest
  path: packages/shared-utils
- name: web
  os: ubuntu-latest
  path: packages/web
