packages/clippier/tests/snapshots/business_logic_tests__packages_command_json_output.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: normalize_paths(parsed)
---
- name: api
  path: packages/api
  os: ubuntu-latest
- name: cli
  path: packages/cli
  os: ubuntu-latest
- name: core
  path: packages/core
  os: ubuntu-latest
- name: models
  path: packages/models
  os: ubuntu-latest
- name: shared-utils
  path: packages/shared-utils
  os: ubuntu-latest
- name: web
  path: packages/web
  os: ubuntu-latest
