packages/clippier/tests/snapshots/business_logic_tests__packages_command_max_parallel.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: normalize_paths(parsed)
---
- name: api
  path: packages/api
  os: ubuntu-latest
- name: cli
  path: packages/cli
  os: ubuntu-latest
- name: core
  path: packages/core
  os: ubuntu-latest
