packages/clippier/tests/snapshots/business_logic_tests__packages_command_raw_output.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: packages_raw
---
api
cli
core
models
shared-utils
web
