packages/clippier/tests/snapshots/business_logic_tests__packages_command_specific_packages.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: normalize_paths(parsed)
---
- name: api
  path: packages/api
  os: ubuntu-latest
- name: web
  path: packages/web
  os: ubuntu-latest
