packages/clippier/tests/snapshots/business_logic_tests__process_workspace_configs_filtered.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: configs
---
- dependencies: apt-get update && apt-get install -y build-essential
  env: "API_PORT=\"3000\""
  features:
    - frontend
    - api
  name: api
  nightly: false
  os: ubuntu
  path: /tmp/nix-shell-16502-0/.tmppw9kpP/packages/api
  requiredFeatures:
    - core
- env: "API_PORT=\"3000\"\nBIND_ADDR=\"127.0.0.1\""
  features:
    - frontend
    - api
  name: api
  nightly: false
  os: windows
  path: /tmp/nix-shell-16502-0/.tmppw9kpP/packages/api
  requiredFeatures:
    - core
- env: "API_PORT=\"3000\""
  features:
    - frontend
    - api
  name: api
  nightly: false
  os: macos
  path: /tmp/nix-shell-16502-0/.tmppw9kpP/packages/api
  requiredFeatures:
    - core
- ciSteps: "npm install\nnpm run build"
  dependencies: apt-get update && apt-get install -y nodejs npm
  env: "FRONTEND_BUILD=\"production\"\nWEB_PORT=\"8080\""
  features:
    - frontend
  name: frontend-build
  nightly: false
  os: ubuntu
  path: /tmp/nix-shell-16502-0/.tmppw9kpP/packages/web
  requiredFeatures:
    - core
- env: "WEB_PORT=\"8080\""
  features:
    - api
  name: frontend-build
  nightly: false
  os: ubuntu
  path: /tmp/nix-shell-16502-0/.tmppw9kpP/packages/web
  requiredFeatures:
    - core
- env: "FRONTEND_BUILD=\"production\"\nSSR_ENABLED=\"true\"\nWEB_PORT=\"8080\""
  features:
    - frontend
  name: ssr-build
  nightly: false
  os: ubuntu
  path: /tmp/nix-shell-16502-0/.tmppw9kpP/packages/web
  requiredFeatures:
    - core
- env: "SSR_ENABLED=\"true\"\nWEB_PORT=\"8080\""
  features:
    - api
  name: ssr-build
  nightly: false
  os: ubuntu
  path: /tmp/nix-shell-16502-0/.tmppw9kpP/packages/web
  requiredFeatures:
    - core
